# agentic-requirement-compiler

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
example/ticketbooking-demo/: requirements.md  requirements.yaml
scripts/: verify_visual_responses_api.py
src/: agent_workflow.py  main.py  requirements.txt  runtime_sdk.py  utils.py  workflow_phases.py
src/agents/: __init__.py  arc_agent.py  compatible_openai.py  context.py  factory.py  interface_designer.py  model_factory.py  openai_api_adapter.py  runners.py  test_driven_developer.py  test_failure_verifier.py  test_generator.py
src/app_type_handler/: __init__.py  android.py  base.py  cli.py  web.py
src/app_types/: web.py
src/arc-agent/: .env_example  .gitignore  MANIFEST.in  agent_workflow.py  app_context.py  arcbench_compat.py  compilation_service.py  compiler_driver.py  compiler_state.py  main.py  pyproject.toml  requirement_contracts.py  requirements.txt  run_compilation_cli.py  structured_output.py  terminal_run.py  utils.py  workflow_phase_utils.py  workflow_phases.py
src/arc-agent/agents/: arc_agent.py  codebase_explorer.py  context_pipeline.py  interface_designer.py  prompt_sections.py  requirement_analyzer.py  test_driven_developer.py  test_failure_verifier.py  test_generator.py
src/arc-agent/agents/tools/: __init__.py  cli_tools.py  file_tools.py  search_tools.py  tool_schema.py
src/arc-agent/app_types/: __init__.py  android.py  base.py  web.py
src/arc-agent/arcbench_agent_runtime/: __init__.py  context.py  events.py  gitops.py  jsonio.py  runtime.py  traceability.py
src/arc-agent/prompts/: stack.py
src/arc-agent/template-fullstack/backend/: package-lock.json  package.json
src/arc-agent/template-fullstack/backend/src/: index.js
src/arc-agent/template-fullstack/frontend/: package-lock.json  package.json  vite.config.js
src/arc-agent/template-fullstack/frontend/src/: App.jsx
src/arc-agent/template-fullstack/frontend/src/pages/: HomePage.jsx
src/arc-agent/templates/: __init__.py
src/arc-agent/templates/android/app/src/main/java/com/example/template/data/local/: AppDatabase.java  Counter.java  CounterDao.java
src/arc-agent/templates/android/app/src/main/java/com/example/template/data/remote/: RemoteCounterService.java
src/arc-agent/templates/android/app/src/main/java/com/example/template/domain/: CounterManager.java
src/arc-agent/templates/android/app/src/main/java/com/example/template/ui/: MainViewModelFactory.java
src/arc-agent/templates/android/app/src/main/res/layout/: activity_main.xml
src/arc-agent/templates/android/gradle/wrapper/: gradle-wrapper.properties
src/arc-agent/templates/web/backend/: package.json  playwright.config.js  vitest.config.js
src/arc-agent/templates/web/backend/src/: app.js  index.js
src/arc-agent/templates/web/backend/src/database/: index.js  init_db.js  seed_db.js  test_harness.js
src/arc-agent/templates/web/frontend/: vite.config.js
src/arc-agent/templates/web/frontend/src/api/: index.ts
src/arc-agent/templates/web/frontend/src/pages/: HomePage.tsx
src/arc-agent/traceability/: __init__.py  database.py  service.py  test_result_tracker.py  traceability_service.py
src/arc-extension/: .gitignore  .vscodeignore  package-lock.json  package.json  tsconfig.json
src/arc-web/: package-lock.json  package.json  vite.config.ts
src/arcbench_agent_runtime/: __init__.py  context.py  events.py  gitops.py  runtime.py  traceability.py
src/context/: __init__.py  (+1 more)
(+113 files in other folders)
