[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-agent"
version = "0.1.0"
description = "Agentic Requirement Compiler CLI agent"
requires-python = ">=3.11"
dependencies = [
  "aiofiles",
  "openai",
  "requests",
  "python-dotenv",
  "pyyaml",
  "pydantic",
  "colorama",
  "click",
  "jsonschema",
  "tiktoken",
  "httpx[socks]",
  "deepagents",
  "langchain-openai",
]

[project.scripts]
arc-agent = "arc_agent_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
  "agent_workflow",
  "arc_agent_cli",
  "main",
  "runtime_sdk",
  "structured_output",
  "utils",
  "workflow_phase_utils",
  "workflow_phases",
]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "agents",
  "agents.*",
  "app_type_handler",
  "app_type_handler.*",
  "arcbench_agent_runtime",
  "arcbench_agent_runtime.*",
  "context",
  "context.*",
  "core",
  "core.*",
  "memory",
  "memory.*",
  "prompts",
  "prompts.*",
  "templates",
  "templates.*",
  "tools",
  "tools.*",
]
namespaces = true

[tool.setuptools.package-data]
templates = ["**/*", "**/.*"]
